# dense-star

./: .gitignore  CMakeLists.txt  P1P2.py  P1estrelas_ultrarel.f90  images.md  images.py  main.cpp  run.sh  todo.md
cpp/: .gitignore  CMakeLists.txt
cpp/include/: dense-star.hpp
cpp/src/: dense-star.cpp  main.cpp
fortran/: .gitignore  CMakeLists.txt  P2estrelas_relativ.f90  P3estrelas_ultrarel2.f90  P4estrelas_relativ2.f90  cmd.txt  compile.sh
fortran/src/fig43/: P1estrelas_ultrarel.f90  P2estrelas_relativ.f90
fortran/src/fig44/: P3estrelas_ultrarel2.f90
fortran/src/fig44and45/: P3estrelas_ultrarel2.f90  P4estrelas_relativ2.f90
fortran/src/fig46/: P4estrelas_relativ2_B1.f90  P4estrelas_relativ2_B2.f90  P4estrelas_relativ2_B3.f90  P4estrelas_relativ2_B4.f90
fortran/src/fig47and48/: P1.f90  P5.f90
fortran/src/fig49/: P3.f90  P6.f90
include/: dense-star.hpp
python/: Graph1.ipynb  Graph2.ipynb  Graph3.ipynb  Graph4.ipynb  Graph4Test.ipynb  Graphs.ipynb  P1.py  P2.py  cpp.py  fig43.py  fig44.py  fig45.py  fig46.py  fig47.py  fig48.py  fig49.py  test.sh
src/: dense-star.cpp
